# thesis-sim

./: .gitignore  Cargo.toml  layout.hdl  simulator.rbl
assets/: drone.stl  drone1.stl
src/: app.rs  gui.rs  lib.rs  main.rs
src/app/: app.rs  control.rs  dynamics.rs  measurement.rs  plot.rs  state.rs  ukf.rs
